# electric-grid-resilience

./: .gitignore  CLAUDE.md  Methodolgy.md  README.md  READMEdata.txt?download=1  data.md  notes  pyproject.toml  references.md  requirements.txt  shapefile?layers=25  variable_metadata_and_description.txt
config/: settings.py
data/processed/: asset_risk_scores.csv  failure_mode_analysis.csv  loca2_projections_caiso.csv  loca2_projections_ercot.csv  nex_gddp_poc_txx.csv  policy_recommendations.csv  regulatory_gap_analysis.csv
docs/: Methodology.md  README.md  data.md
figures/: 01_build_descriptive_figures.py  02_build_asset_and_climate_figures.py  04_inject_nex_gddp_delta.py  05_download_hifld_substations.py  06_download_cal_fire_fhsz.py  README.md
notebooks/: 01_study_area.ipynb  02_outage_panel.ipynb  03_weather_panel.ipynb  04_historical_analysis.ipynb  05_climate_projections.ipynb  06_stress_test.ipynb  07_asset_vulnerability.ipynb  08_ej_overlay.ipynb  09_qualitative.ipynb  10_solutions.ipynb  NOTEBOOKS.md
scripts/: download_data.py  download_noaa_isd.py
src/analysis/: compound_flags.py  panel_regression.py  rd_analysis.py  stress_test.py
src/data/: eagle_i.py  ejscreen.py  loca2.py  loca2_ar6_synthesis.py  nex_gddp_loader.py  noaa_isd.py
src/viz/: maps.py
