[project]
name = "electric-grid-resilience"
version = "0.1.0"
description = "Analysis of climate-driven grid stress and outages in ERCOT and CAISO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "linearmodels>=6.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "folium>=0.17",
    "plotly>=5.22",
    "boto3>=1.34",
    "s3fs>=2024.3",
    "requests>=2.31",
    "tqdm>=4.66",
    "jupyter>=1.0",
    "jupyterlab>=4.1",
    "ipywidgets>=8.1",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "pyarrow>=15.0",
    "xarray>=2024.1",
    "netcdf4>=1.6",
    "h5netcdf>=1.3",
]

[tool.uv]
package = false
